--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  intl: ^0.19.0
+  intl: ^0.17.0
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
